# KamiEngine

./: .gitmodules  CMakeLists.txt  README.md
include/engine/: Engine.hpp  IKamiInputEventListener.hpp  KamiInputEvent.hpp  KamiInputEventSystem.hpp
include/engine/appLayer/: KamiAppLayer.hpp  KamiClientOptions.hpp  KamiTextRessources.hpp
include/engine/cache/: KamiRessourceCache.hpp  KamiTexture.hpp
include/engine/component/: CubeVertexDataComponent.hpp  KamiOpenGlRenderableComponent.hpp  KamiOpenglRenderComponent.hpp  KamiPositionComponent.hpp  KamiShaderComponent.hpp  KamiTextureComponent.hpp  KamiTransformComponent.hpp  KamiUniform.hpp  KamiVertexAttribute.hpp
include/engine/entity/: KamiEntityComponent.hpp  KamiEntityComponentFactory.hpp  KamiEntityManager.hpp  KamiGameEntity.hpp  KamiGameEntityFactory.hpp
include/engine/eventSystem/: IKamiInputEventListener.hpp
include/engine/system/: KamiEntityRenderSystem.hpp
include/network/: KamiNet.hpp
include/platform/: KamiGlfwWindow.hpp  glfw_window.hpp
include/random/: KamiRandom.hpp
include/render/: KamiCamera.hpp  KamiGl.hpp  KamiRender.hpp  KamiShader.hpp  KamiShapePrimitive.hpp  KamiTexture.hpp
shader/: fragment.frag  vertex.vert
src/engine/: Engine.cpp  KamiInputEventSystem.cpp
src/engine/appLayer/: KamiTextRessources.cpp  kamiAppLayer.cpp  kamiClientOptions.cpp
src/engine/cache/: KamiRessourceCache.cpp  (+1 more)
src/network/: KamiNet.cpp
src/platform/: KamiGlfwWindow.cpp  glfw_window.cpp
src/random/: KamiRandom.cpp
src/render/: KamiCamera.cpp  KamiRender.cpp  KamiShader.cpp  KamiTexture.cpp
(+12 files in other folders)
